# src/features/items/model/exchange-dto.ts
@@ -1,0 +1,4 @@
+export interface ExchangeDto {
+    itemToExchange: string;
+    itemToGet: string;
+}
